Add ruby_routes.gemspec to Dockerfile for gem installation

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,6 +15,7 @@ RUN sudo apt-get update && export DEBIAN_FRONTEND=noninteractive \
 # during build instead of on start. When a fork or branch has different gems, we still have an
 # advantage due to caching of the other gems.
 RUN mkdir -p /tmp/rails
+COPY ruby_routes/ruby_routes.gemspec /tmp/gems/ruby_routes/
 COPY Gemfile Gemfile.lock RAILS_VERSION rails.gemspec package.json yarn.lock /tmp/rails/
 COPY actioncable/actioncable.gemspec /tmp/rails/actioncable/
 COPY actionmailbox/actionmailbox.gemspec /tmp/rails/actionmailbox/
